--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
     src="https://www.youtube.com/embed/toZW65rksYY">
     </iframe>
     <img src="https://cdn.7tv.app/emote/01GH5GNR7R000DV4VPC0PR1W61/4x.gif" alt="bwanadance">
+    <img src="https://cdn.betterttv.net/emote/613497efaf28e956864c028b/3x.webp" alt="gopherDetective">
+
   </body>
 </html>
