--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <iframe width="420" height="315"
     src="https://www.youtube.com/embed/toZW65rksYY">
     </iframe>
+    <img src="https://kappa.lol/Iqbbg5.png" alt="scran">
     <img src="https://cdn.7tv.app/emote/01GH5GNR7R000DV4VPC0PR1W61/4x.gif" alt="bwanadance">
     <img src="https://cdn.betterttv.net/emote/613497efaf28e956864c028b/3x.webp" alt="gopherDetective">
     <style>:root{color-scheme:light dark}body{background-color:light-dark(#ccc,#333)}</style>
