--- a/index.html
+++ b/index.html
@@ -1,20 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>noTheOwNeR's website</title>
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
-    <iframe width="420" height="315"
-    src="https://www.youtube.com/embed/toZW65rksYY">
-    </iframe>
-    <img src="https://kappa.lol/Iqbbg5.png" alt="scran" width="200" height="200">
-    <img src="https://cdn.7tv.app/emote/01GH5GNR7R000DV4VPC0PR1W61/4x.gif" alt="bwanadance">
-    <img src="https://cdn.betterttv.net/emote/613497efaf28e956864c028b/3x.webp" alt="gopherDetective">
-    <style>:root{color-scheme:light dark}body{background-color:light-dark(#ccc,#333)}</style>
-  </body>
-</html>
 
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>noTheOwNeR's website</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+  <iframe width="420" height="315" src="https://www.youtube.com/embed/toZW65rksYY">
+  </iframe>
+  <img src="https://kappa.lol/Iqbbg5.png" alt="scran" width="200" height="200">
+  <img src="https://cdn.7tv.app/emote/01GH5GNR7R000DV4VPC0PR1W61/4x.gif" alt="bwanadance">
+  <img src="https://cdn.betterttv.net/emote/613497efaf28e956864c028b/3x.webp" alt="gopherDetective">
+  <style>
+    :root {
+      color-scheme: light dark
+    }
+
+    body {
+      background-color: light-dark(#ccc, #333)
+    }
+  </style>
+</body>
+
+</html>
