--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <iframe width="420" height="315" src="https://www.youtube.com/embed/toZW65rksYY">
   </iframe>
   <img src="https://kappa.lol/Iqbbg5.png" alt="scran" width="200" height="200">
+  <img src="https://kappa.lol/7zWhry.png" alt="gmpajs" width="200" height="200">
   <img src="https://cdn.7tv.app/emote/01GH5GNR7R000DV4VPC0PR1W61/4x.gif" alt="bwanadance">
   <img src="https://cdn.betterttv.net/emote/613497efaf28e956864c028b/3x.webp" alt="gopherDetective">
   <style>
