--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <img src="https://kappa.lol/7zWhry.png" alt="gmpajs" width="200" height="200">
   <img src="https://cdn.7tv.app/emote/01GH5GNR7R000DV4VPC0PR1W61/4x.gif" alt="bwanadance">
   <img src="https://cdn.betterttv.net/emote/613497efaf28e956864c028b/3x.webp" alt="gopherDetective">
+  <img src="https://kappa.lol/tOHy-4.gif" alt="JSTSJSTSJSTS">
   <style>
     :root {
       color-scheme: light dark
