--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <img src="https://cdn.betterttv.net/emote/613497efaf28e956864c028b/3x.webp" alt="gopherDetective">
   <img src="https://kappa.lol/tOHy-4.gif" alt="JSTSJSTSJSTS">
   <img src="https://cdn.7tv.app/emote/01F6P2T7Y80005F831QFQJMN50/4x.webp" alt="pajaArch">
+  <img src="https://cdn.7tv.app/emote/01GH1WB74R0004829F0MJRRQGH/4x.avif" alt="nibblerLaugh">
   <p>haha we are actually live lol but what we are doing is preparing things that need to be done before stream like getting water and peeing and brushing teeth and flossing xD</p>
   <style>
     :root {
