--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <img src="https://cdn.7tv.app/emote/01GH5GNR7R000DV4VPC0PR1W61/4x.webp" alt="bwanadance">
   <img src="https://cdn.betterttv.net/emote/613497efaf28e956864c028b/3x.webp" alt="gopherDetective">
   <img src="https://kappa.lol/tOHy-4.gif" alt="JSTSJSTSJSTS">
-  <img src="https://cdn.7tv.app/emote/01F6P2T7Y80005F831QFQJMN50/4x.webp" alt="pajaArch">
+  <img src="https://static-cdn.jtvnw.net/emoticons/v2/307857676/default/dark/3.0" alt="pajaArch">
   <img src="https://cdn.7tv.app/emote/01GH1WB74R0004829F0MJRRQGH/4x.webp" alt="nibblerLaugh">
   <img src="https://cdn.7tv.app/emote/01HSJH03PR000A6C0AM9PT52X1/4x.webp" alt="Lurking">
   <img src="https://cdn.frankerfacez.com/emote/128023/4" alt="minidank">
