--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   </p>
   <iframe width="200" height="200" src="https://www.youtube.com/embed/toZW65rksYY">
   </iframe>
+  <img src="https://static-cdn.jtvnw.net/emoticons/v2/emotesv2_32f446bac1fd4fcd92ddfc040ef71fb3/default/dark/3.0" alt="scran">
   <img src="https://cdn.7tv.app/emote/01GH5GNR7R000DV4VPC0PR1W61/4x.webp" alt="bwanadance">
   <img src="https://cdn.betterttv.net/emote/613497efaf28e956864c028b/3x.webp" alt="gopherDetective">
   <img src="https://cdn.7tv.app/emote/01JT16AW5DG7X8QCM8E6E5FV7A/4x.webp" alt="JSTSJSTSJSTS">
