--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <img src="https://static-cdn.jtvnw.net/emoticons/v2/307857676/default/dark/3.0" alt="pajaArch">
   <img src="https://cdn.7tv.app/emote/01GH1WB74R0004829F0MJRRQGH/4x.webp" alt="nibblerLaugh">
   <img src="https://cdn.7tv.app/emote/01HSJH03PR000A6C0AM9PT52X1/4x.webp" alt="Lurking">
-  <img scr="https://cdn.frankerfacez.com/emote/536927/4" alt="FeelsDankMan">
+  <img scr="https://i.notheowner.com/hAl3Y.png" alt="FeelsDankMan">
   <img src="https://cdn.frankerfacez.com/emote/128023/4" alt="minidank">
   <img src="https://cdn.7tv.app/emote/01FWAF9ED80001G2Z4KNS5QKXJ/4x.webp" alt="egFors">
   <img src="https://static-cdn.jtvnw.net/emoticons/v2/300436895/default/dark/3.0" alt="supiniOkay">
