--- a/index.html
+++ b/index.html
@@ -15,14 +15,15 @@
   </p>
   <iframe width="200" height="200" src="https://www.youtube.com/embed/toZW65rksYY">
   </iframe>
-  <img src="https://static-cdn.jtvnw.net/emoticons/v2/emotesv2_32f446bac1fd4fcd92ddfc040ef71fb3/default/dark/3.0" alt="scran">
+  <img src="https://static-cdn.jtvnw.net/emoticons/v2/emotesv2_32f446bac1fd4fcd92ddfc040ef71fb3/default/dark/3.0"
+    alt="scran">
   <img src="https://cdn.7tv.app/emote/01GH5GNR7R000DV4VPC0PR1W61/4x.webp" alt="bwanadance">
   <img src="https://cdn.betterttv.net/emote/613497efaf28e956864c028b/3x.webp" alt="gopherDetective">
   <img src="https://cdn.7tv.app/emote/01JT16AW5DG7X8QCM8E6E5FV7A/4x.webp" alt="JSTSJSTSJSTS">
   <img src="https://static-cdn.jtvnw.net/emoticons/v2/307857676/default/dark/3.0" alt="pajaArch">
   <img src="https://cdn.7tv.app/emote/01GH1WB74R0004829F0MJRRQGH/4x.webp" alt="nibblerLaugh">
   <img src="https://cdn.7tv.app/emote/01HSJH03PR000A6C0AM9PT52X1/4x.webp" alt="Lurking">
-  <img scr="https://i.notheowner.com/hAl3Y.png" alt="FeelsDankMan">
+  <img src="https://cdn.frankerfacez.com/emote/536927/4" alt="FeelsDankMan">
   <img src="https://cdn.frankerfacez.com/emote/128023/4" alt="minidank">
   <img src="https://cdn.7tv.app/emote/01FWAF9ED80001G2Z4KNS5QKXJ/4x.webp" alt="egFors">
   <img src="https://static-cdn.jtvnw.net/emoticons/v2/300436895/default/dark/3.0" alt="supiniOkay">
